# SeuroBot

./: .gitignore  README.md
Arduino/industrial_final/: industrial_final.ino
devel/: .catkin  .rosinstall  setup.sh
devel/include/constrained_ik/: CLIKDynamicConfig.h  CLIKPlannerDynamicConfig.h
devel/include/motion_msgs/: MoveRobotAction.h  MoveRobotActionFeedback.h  MoveRobotActionGoal.h  MoveRobotActionResult.h  MoveRobotFeedback.h  MoveRobotGoal.h  MoveRobotResult.h
devel/lib/abb_driver/: motion_download_interface  robot_state
devel/lib/constrained_ik/: avoid_joint_limits_example  avoid_joint_vel_limits_example  avoid_obstacles_example  avoid_singularities_example  constraints_from_yaml_example  goal_mid_joint_example  goal_minimize_change_example  goal_orientation_example  goal_position_example  goal_tool_orientation_example  goal_tool_pointing_example  goal_tool_position_example  goal_zero_jvel_example
devel/lib/industrial_moveit_benchmarking/: cartesian_benchmarking_node  joint_interpolated_benchmarking_node  stomp_benchmarking_node
git_user_script/: .setGitUser.sh.swp  Ryano647.txt  hannah.txt  jremz8902.txt  mattfortmeyer.txt  niko1499.txt  setGitUser.sh
image_script/: ABBIRB_1600.xcf  BMOtrace.xcf  RGBTEST.xcf  dither.py  rgb100.xcf
src/avrs_main/: CMakeLists.txt  package.xml
src/main/: CMakeLists.txt  package.xml
src/main/scripts/: main_node.py
src/motion_msgs/: CMakeLists.txt
src/motion_planning_client/: CMakeLists.txt  package.xml
src/motion_server/: CMakeLists.txt  package.xml
src/motion_server_fast/: CMakeLists.txt  package.xml
(+96 files in other folders)
